--- a/3eme projet/styles.css
+++ b/3eme projet/styles.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     display: flex;
+    flex-direction:row;
 }
 
 #navbar {
@@ -21,7 +22,7 @@ body {
     padding: 0; 
 }
 
-#navbar ul li {
+li {
     margin: 10px 0; 
 }
 
@@ -66,7 +67,7 @@ section header {
 
 h2 {
     text-align: left;
-    font-family: Sans-serif; 
+    font-family: Serif; 
     font-size: 20px;
     font-weight: bold;
 }
@@ -83,6 +84,14 @@ img {
     display: block; 
     margin: 0 auto; 
 }
+figcaption{
+    font-style: italic; 
+  text-align: center; 
+  font-size: 14px;
+  color: #555; 
+  margin-top: 10px; 
+  margin-bottom: 10px;
+}
 code {
     background-color: #f4f4f4;
     border: 1px solid rgb(100,100,100); 
@@ -93,4 +102,23 @@ code {
     color: black;
     white-space: nowrap;
     display: inline-block;
+}
+strong{
+    font-weight: bold;
+    text-decoration:underline;
+}
+em{
+    font-weight: italic;
+    font-size: 20px;
+}
+p{
+    font-size: 16px;
+    font-family: sans-serif; 
+    line-height: 1.5; 
+    color: #333; 
+    text-align: justify; 
+    margin-bottom: 20px; 
+    padding: 10px;  
+    background-color: #f9f9f9; 
+    border-radius: 5px; 
 }
