--- a/3eme projet/styles.css
+++ b/3eme projet/styles.css
@@ -43,7 +43,15 @@ li {
     padding: 20px;
     background-color: white;
 }
-
+h1{
+    text-align: center;
+    font-family: Serif; 
+    font-size: 23px;
+    font-weight: bold;
+    color: black;
+    background-color: #F0F0F2;
+    padding: 10px;
+}
 @media (max-width: 600px) {
     #navbar {
         position: relative; 
@@ -61,8 +69,9 @@ section header {
     font-family: Serif;
     font-weight: bold;
     text-align: center;
-    background-color: #F0F0F2;
+    background-color: rgb(100,100,100);
     padding: 10px;
+    color: white;
 }
 
 h2 {
