--- a/3eme projet/styles.css
+++ b/3eme projet/styles.css
@@ -1,13 +1,22 @@
+:root{
+    --primary-bg: #646464;
+    --secondary-bg: #f9f9f9;
+    --hover-bg: #555;
+    --text-dark: #333;
+    --code-bg: #f4f4f4;
+}
+
 body {
     margin: 0;
     font-family: Arial, sans-serif;
     display: flex;
-    flex-direction:row;
+    flex-direction:column;
+    color: var(--text-dark);
 }
 
 #navbar {
     width: 250px; 
-    background-color: rgb(100, 100, 100);
+    background-color: var(--primary-bg);
     position: fixed; 
     height: 100%;  
     font-size: 12px;
@@ -29,17 +38,17 @@ li {
 #navbar ul li a {
     color: white; 
     text-decoration: none; 
-    padding: 10px; 
+    padding: 12px 15px; 
     display: block; 
 }
 
 #navbar ul li a:hover {
-    background-color: #555;
+    background-color: var(--hover-bg);
 }
 
 #main-doc {
     margin-left: 250px; 
-    margin-right: 50px;
+    margin-right: 20px;
     padding: 20px;
     background-color: white;
 }
@@ -52,6 +61,7 @@ h1{
     background-color: #F0F0F2;
     padding: 10px;
 }
+
 @media (max-width: 600px) {
     #navbar {
         position: relative; 
@@ -59,9 +69,6 @@ h1{
         height: auto; 
     }
 
-    #main-doc {
-        margin-left: 0;
-    }
 }
 
 section header {
@@ -69,9 +76,10 @@ section header {
     font-family: Serif;
     font-weight: bold;
     text-align: center;
-    background-color: rgb(100,100,100);
+    background-color: var(--primary-bg);
     padding: 10px;
     color: white;
+    margin: 1.5rem 0;
 }
 
 h2 {
@@ -95,15 +103,15 @@ img {
 }
 figcaption{
     font-style: italic; 
-  text-align: center; 
-  font-size: 14px;
-  color: #555; 
-  margin-top: 10px; 
-  margin-bottom: 10px;
+    text-align: center; 
+    font-size: 14px;
+    color: var(--text-dark); 
+    margin-top: 10px; 
+    margin-bottom: 10px;
 }
 code {
-    background-color: #f4f4f4;
-    border: 1px solid rgb(100,100,100); 
+    background-color: var(--code-bg);
+    border: 1px solid var(--primary-bg); 
     border-radius: 4px; 
     padding: 4px 6px; 
     font-family: Courier, monospace; 
@@ -126,8 +134,16 @@ p{
     line-height: 1.5; 
     color: #333; 
     text-align: justify; 
-    margin-bottom: 20px; 
+    margin-bottom: 20px;
+    margin: 0;
     padding: 10px;  
-    background-color: #f9f9f9; 
+    background-color: var(--secondary-bg); 
     border-radius: 5px; 
+}
+footer {
+    margin-left: 250px;
+    padding: 10px;
+    font-size: 5px;
+    font-family: sans-serif;
+    background-color: var(--secondary-bg);
 }
