--- a/3eme projet/styles.css
+++ b/3eme projet/styles.css
@@ -135,15 +135,14 @@ p{
     color: #333; 
     text-align: justify; 
     margin-bottom: 20px;
-    margin: 0;
     padding: 10px;  
     background-color: var(--secondary-bg); 
     border-radius: 5px; 
 }
-footer {
-    margin-left: 250px;
-    padding: 10px;
-    font-size: 5px;
+#notehawking, #notenewton{
+    margin-left: 260px;
+    padding: 0;
+    font-size: 12px;
     font-family: sans-serif;
     background-color: var(--secondary-bg);
 }
